tests/ui/typeck/function-in-pattern-error-12863.stderr
error[E0532]: expected unit struct, unit variant or constant, found function `foo::bar`
  --> $DIR/function-in-pattern-error-12863.rs:7:9
   |
LL |         foo::bar => {}
   |         ^^^^^^^^ not a unit struct, unit variant or constant

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0532`.
